--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "com.esoxjem.movieguide"
+        applicationId "com.ashik.moviemela"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
@@ -57,7 +57,7 @@ ext {
     supportLibVersion = '28.0.0'
     okhttpVersion = '3.9.0'
     daggerVersion = '2.5'
-    espressoVersion = '3.0.1'
+    espressoVersion = '3.0.2'
 }
 
 dependencies {
@@ -85,8 +85,8 @@ dependencies {
 
     // Other
     implementation 'net.jcip:jcip-annotations:1.0'
-    implementation 'com.google.guava:guava:18.0'
-    implementation 'com.squareup.moshi:moshi:1.1.0'
+    implementation 'com.google.guava:guava:24.1-jre'
+    implementation 'com.squareup.moshi:moshi:1.4.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
@@ -112,6 +112,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
         exclude module: 'recyclerview-v7'
     }
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
